templates/snapshot-validation-webhook_template.yaml
---
# Source: snapshot-validation-webhook/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-snapshot-validation-webhook
  labels:
    helm.sh/chart: snapshot-validation-webhook-1.9.0
    app.kubernetes.io/name: snapshot-validation-webhook
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v6.3.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: snapshot-validation-webhook
    app.kubernetes.io/instance: release-name
---
# Source: snapshot-validation-webhook/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-snapshot-validation-webhook
  labels:
    helm.sh/chart: snapshot-validation-webhook-1.9.0
    app.kubernetes.io/name: snapshot-validation-webhook
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v6.3.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: snapshot-validation-webhook
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: snapshot-validation-webhook
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-snapshot-validation-webhook
      securityContext:
        {}
      containers:
        - name: snapshot-validation-webhook
          securityContext:
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          image: "registry.k8s.io/sig-storage/snapshot-validation-webhook:v6.3.1"
          imagePullPolicy: IfNotPresent
          args:
            - --port=8443
            - --tls-cert-file=/etc/snapshot-validation/tls.crt
            - --tls-private-key-file=/etc/snapshot-validation/tls.key
          ports:
            - name: https
              containerPort: 8443
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/snapshot-validation
              name: tls-config
          livenessProbe:
            httpGet:
              path: /readyz
              port: https
              scheme: HTTPS
          readinessProbe:
            httpGet:
              path: /readyz
              port: https
              scheme: HTTPS
          resources:
            {}
      volumes:
        - name: tls-config
          secret:
            secretName: release-name-snapshot-validation-webhook-tls
---
# Source: snapshot-validation-webhook/templates/webhook.yaml
# Check if the TLS secret already exists and initialize variables for later use at the top level
---
# Source: snapshot-validation-webhook/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: release-name-snapshot-validation-webhook
  labels:
    helm.sh/chart: snapshot-validation-webhook-1.9.0
    app.kubernetes.io/name: snapshot-validation-webhook
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v6.3.1"
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: snapshot-validation-webhook.snapshot.storage.k8s.io
    rules:
      - apiGroups:
        - snapshot.storage.k8s.io
        apiVersions:
        - v1
        - v1beta1
        operations:
        - CREATE
        - UPDATE
        resources:
        - volumesnapshots
        - volumesnapshotclasses
        - volumesnapshotcontents
        scope: "*"
    clientConfig:
      service:
        namespace: default
        name: release-name-snapshot-validation-webhook
        path: "/volumesnapshot"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURpakNDQW5LZ0F3SUJBZ0lSQU85VWxJS0xNOHZ4LzgxNW1ySE1QOXd3RFFZSktvWklodmNOQVFFTEJRQXcKUHpFOU1Ec0dBMVVFQXhNMGNtVnNaV0Z6WlMxdVlXMWxMWE51WVhCemFHOTBMWFpoYkdsa1lYUnBiMjR0ZDJWaQphRzl2YXk1a1pXWmhkV3gwTG5OMll6QWVGdzB5TkRBMU1UVXdOelV3TVRGYUZ3MHpOREExTVRNd056VXdNVEZhCk1EOHhQVEE3QmdOVkJBTVROSEpsYkdWaGMyVXRibUZ0WlMxemJtRndjMmh2ZEMxMllXeHBaR0YwYVc5dUxYZGwKWW1odmIyc3VaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQgpBUUR0dTducEtC [...]
    admissionReviewVersions:
      - v1
      - v1beta1
    sideEffects: None
    failurePolicy: Fail
    timeoutSeconds: 2
  - name: snapshot-validation-webhook.groupsnapshot.storage.k8s.io
    rules:
      - apiGroups:
          - groupsnapshot.storage.k8s.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - volumegroupsnapshots
          - volumegroupsnapshotcontents
          - volumegroupsnapshotclasses
        scope: "*"
    clientConfig:
      service:
        namespace: default
        name: release-name-snapshot-validation-webhook
        path: "/volumegroupsnapshot"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURpakNDQW5LZ0F3SUJBZ0lSQU85VWxJS0xNOHZ4LzgxNW1ySE1QOXd3RFFZSktvWklodmNOQVFFTEJRQXcKUHpFOU1Ec0dBMVVFQXhNMGNtVnNaV0Z6WlMxdVlXMWxMWE51WVhCemFHOTBMWFpoYkdsa1lYUnBiMjR0ZDJWaQphRzl2YXk1a1pXWmhkV3gwTG5OMll6QWVGdzB5TkRBMU1UVXdOelV3TVRGYUZ3MHpOREExTVRNd056VXdNVEZhCk1EOHhQVEE3QmdOVkJBTVROSEpsYkdWaGMyVXRibUZ0WlMxemJtRndjMmh2ZEMxMllXeHBaR0YwYVc5dUxYZGwKWW1odmIyc3VaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQgpBUUR0dTducEtC [...]
    admissionReviewVersions:
      - v1
      - v1beta1
    sideEffects: None
    failurePolicy: Fail
    timeoutSeconds: 2
---
# Source: snapshot-validation-webhook/templates/tests/test-invalid-body.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-snapshot-validation-webhook-test-invalid-body"
  labels:
    helm.sh/chart: snapshot-validation-webhook-1.9.0
    app.kubernetes.io/name: snapshot-validation-webhook
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v6.3.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: curl
      image: curlimages/curl
      args:
        - sh
        - -exc
        - |
          curl -kfsS -X POST -H 'Content-Type: application/json' -d '' https://release-name-snapshot-validation-webhook/volumesnapshot | grep -c '"allowed":false'
  restartPolicy: Never
---
# Source: snapshot-validation-webhook/templates/tests/test-valid-body.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-snapshot-validation-webhook-test-valid-body"
  labels:
    helm.sh/chart: snapshot-validation-webhook-1.9.0
    app.kubernetes.io/name: snapshot-validation-webhook
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v6.3.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: curl
      image: curlimages/curl
      args:
        - sh
        - -exc
        - |
          curl -kfsS -X POST -H 'Content-Type: application/json' -d '' https://release-name-snapshot-validation-webhook/volumesnapshot | grep -c '"allowed":true'
  restartPolicy: Never
